Added react-bootstrap and react-cions to package.json and updated README.md file

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,9 @@
-@import '~bulma';
+@import "~bulma";
+@import "~bootstrap";
+
+@import "./variables";
 
 html,
 body {
-  background-color: #555555;
+  background-color: $primaryColour;
 }
